gatekeeper/constraints/block-host-network.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sHostNetwork
metadata:
  name: block-host-network
spec:
  enforcementAction: deny # Từ chối thẳng nếu vi phạm
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - demo
