gatekeeper/constraints/block-latest-tag.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedTags
metadata:
  name: block-latest-tag
spec:
  enforcementAction: deny # Từ chối thẳng nếu vi phạm
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - demo
  parameters:
    tags: ["latest"]
